--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             'left1 left1 center2 right1 right1';
             gap: 20px;
             background-color: #d4ccd9ff;
-            padding: 50px;
-
+            padding-left: 50px;
+            padding-right: 50px;
+            padding-top: 10px;
         }
 
         .fade {
