test for links in contact

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a href="events.html">PAST EVENTS</a>
                 <a href="resources.html">RESOURCES</a>
                 <a href="news.html">NEWS</a>
-                <a href="contact.html">CONTACT US</a>
+                <a href="https://vancouverwomensday.ca/team">CONTACT US</a>
             </h3>
         </div>
 
