fix url? maybe bandaid

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class = "item1">
             <h1 style="font-size: 55px; text-align: center; "><a href="index.html">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 35px; text-align: center; background-color: #8970c8ff;">
-                <a href="team.html">TEAM</a> 
-                <a href="events.html">PAST EVENTS</a>
-                <a href="resources.html">RESOURCES</a>
-                <a href="news.html">NEWS</a>
-                <a href="https://vancouverwomensday.ca/team">CONTACT US</a>
+                <a href="https://vancouverwomensday.ca/team">TEAM</a> 
+                <a href="https://vancouverwomensday.ca/events">PAST EVENTS</a>
+                <a href="https://vancouverwomensday.ca/team/resources">RESOURCES</a>
+                <a href="https://vancouverwomensday.ca/team/news">NEWS</a>
+                <a href="https://vancouverwomensday.ca/team/contact">CONTACT US</a>
             </h3>
         </div>
 
