--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class = "grid-container">
 
         <div class = "item1">
-            <h1 style="font-size: 55px; text-align: center; "><a href="index.html">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
+            <h1 style="font-size: 55px; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 35px; text-align: center; background-color: #8970c8ff;">
                 <a href="./team">TEAM</a> 
                 <a href="./events">PAST EVENTS</a>
