--- a/team.html
+++ b/team.html
@@ -78,13 +78,13 @@
     <div class = "grid-container">
 
         <div class = "item1">
-            <h1 style="font-size: 55px; text-align: center; "><a href="index.html">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
+            <h1 style="font-size: 55px; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 35px; text-align: center; background-color: #8970c8ff;">
-                <a href="team.html">TEAM</a> 
-                <a href="events.html">PAST EVENTS</a>
-                <a href="resources.html">RESOURCES</a>
-                <a href="news.html">NEWS</a>
-                <a href="contact.html">CONTACT US</a>
+                <a href="./team">TEAM</a> 
+                <a href="./events">PAST EVENTS</a>
+                <a href="./resources">RESOURCES</a>
+                <a href="./news">NEWS</a>
+                <a href="./contact">CONTACT US</a>
             </h3>
                 <br>
             <h3 style="font-size: 40px; text-align: center; color: #321f4c; ">Vancouver Committee</h3>
