--- a/contact.html
+++ b/contact.html
@@ -122,12 +122,13 @@
             <p>
                 Leave a message for the IWD Team by filling out this form.<br>
                 <button onclick="window.location.href='https://forms.gle/jVBgfD5Jy2x1azxQ6'">Submit Form</button><br>
-                Media Contact: Submit a media request by emailing us at <a href = "mailto: internationalwomensdaymarch@gmail.com">internationalwomensdaymarch@gmail.com</a>
+                <br>Media Contact: Submit a media request by emailing us at <a href = "mailto: internationalwomensdaymarch@gmail.com">internationalwomensdaymarch@gmail.com</a>
             </p>
         </div>
 
         <div class = "item5">
-            
+            <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+            <div class="elfsight-app-41c369d4-9e19-4321-bcc6-e349b6245810" data-elfsight-app-lazy></div>
         </div>
 
         <div class ="item6">
