--- a/resources.html
+++ b/resources.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERNATIONAL WOMEN'S DAY MARCH VANCOUVER</title>
     <style>
-        @font-face { 
-            font-family: 'akira'; src: url(fonts/matisse/matisse/matisse.otf) format("opentype"); }
+       @font-face { 
+            font-family: 'rubik'; src: url(fonts/Rubik/static/Rubik-Black.ttf) format("truetype"); }
         body {
             background-color: #d4ccd9ff;
             cursor: url('cursor/woman.png') 13 19.5, move;
             margin: 0;
             padding: 0;
-            font-family: 'akira', Arial, sans-serif;
+            font-family: 'rubik', Arial, sans-serif;
         }
         
         .item1 {grid-area: header;            
