--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERNATIONAL WOMEN'S DAY MARCH VANCOUVER</title>
+    <link rel="icon" href="/path/to/favicon.ico">
     <style>
         @font-face { 
             font-family: 'rubik'; src: url(fonts/Rubik/static/Rubik-Black.ttf) format("truetype"); }
