figuring out site mapping, added test2 which is mobile friendly

--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class = "item2">
-            <img src="pictures/Yasmin1.jpg" alt="yasmin" style="width: 100%; height: auto;"
+            <img src="pictures/yas_1good.jpg" alt="yasmin" style="width: 100%; height: auto;"
             <p>Yasmin (she/her)<br> 
                 Chair <br>
                 Yasmin is an author, actor and activist. Her full time job is currently working with the North Shore Women's Centre to provide gender based violence reduction program to high schools around BC. Her creative endeavours, be it writing children's books or theatre, are all focused around representation of marginalized groups & underrepresented family structures without that factor being the centre of the story. She holds an MA in Gender, Sexuality & Women's Studies from SFU.
@@ -118,7 +118,7 @@
         </div>
 
         <div class = "item4">
-            <img src="pictures/Oreofeoluwa1.jpeg" alt="oreofeoluwa" style="width: 100%; height: auto;"
+            <img src="pictures/oreofe_1good.jpg" alt="oreofeoluwa" style="width: 100%; height: auto;"
             <p>Oreofeoluwa (she/her) <br>
                 Administrative Director <br>
                 Oreofeoluwa has a bachelor's degree in International relations and diplomacy followed by a masters degree in gender, sexuality and women's studies. Oreofeoluwa currently works as the Lead Researcher and Project Coordinator - gender based violence prevention in high schools where she delivers evidence based prevention programs to youths in high school and communities whilst educating adults about the necessity of these programs. Oreofeoluwa's academic, career and volunteer endeavours- past and present revolve around her dedication to creating spaces and adding value to minorities. 
@@ -132,7 +132,7 @@
         </div>
 
         <div class = "item5">
-            <img src = "pictures/Gülce1.jpg" alt="Gülce" style="width: 100%; height: auto;"
+            <img src = "pictures/gulche_1good.jpg" alt="Gülce" style="width: 100%; height: auto;"
             <p>Gülce (she/her) <br>
                 Operations Director<br>
                 Gülce is currently completing her MA in Developmental Psychology at SFU, focusing on how the community contributes to child and family well-being. She has also worked with parents and children from underrepresented immigrant groups to support their journey by helping them to create their community with appropriate resources as a part of Burnaby Family Life Centre.
