--- a/test2.html
+++ b/test2.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERNATIONAL WOMEN'S DAY MARCH VANCOUVER</title>
-    <link rel="icon" href="/path/to/favicon.ico">
+    <meta name="description" content="Celebrate International Women's Day March in Vancouver. Join us for the march on March 8, 2024, at šxʷƛ̓ənəq Xwtl'e7énḵ Square.">
+    <meta name="keywords" content="International Women's Day, IWD Vancouver, Women's March, Women's Rights, Vancouver Events">
+
+    <link rel="icon" href="/pictures/favicon.ico">
     <style>
         @font-face { 
             font-family: 'rubik'; src: url(fonts/Rubik/static/Rubik-Black.ttf) format("truetype");
