switched font and updated the index with mobile friendly

--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,14 @@
     <title>INTERNATIONAL WOMEN'S DAY MARCH VANCOUVER</title>
     <style>
         @font-face { 
-            font-family: 'rubik'; src: url(fonts/Rubik/static/Rubik-Black.ttf) format("truetype"); }
+            font-family: 'Sans'; src: url(fonts/bcsansfont_web/BcSansFont_Web/2023_03_14_BCSans-Light_2g.otf) format("OpenType");
+        }
         body {
             background-color: #d4ccd9ff;
             cursor: url('cursor/woman.png') 13 19.5, move;
             margin: 0;
             padding: 0;
-            font-family: 'rubik', Arial, sans-serif;
+            font-family: 'bcsans', Arial, sans-serif;
         }
 
         button {
