fix media queries for team, increased max width to at least 700 for new phones. for some reason still in media has a 2x2 grid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Celebrate International Women's Day March in Vancouver. Join us for the march on March 8, 2024, at šxʷƛ̓ənəq Xwtl'e7énḵ Square.">
     <meta name="keywords" content="International Women's Day, international womens march, IWD Vancouver, Women's March, Women's Rights, Vancouver Events">
 
-    <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="icon" href="pictures/favicon.ico">
     <style>
         @font-face { 
             font-family: 'Sans'; src: url(fonts/bcsansfont_web/BcSansFont_Web/2023_03_14_BCSans-Light_2g.otf) format("OpenType");
@@ -20,40 +20,7 @@
             font-family: 'bcsans', Arial, sans-serif;
         }
 
-        @media screen and (max-width: 375px) {
-            .grid-container {
-                grid-template-areas: 
-                    'header'
-                    'left0'
-                    'center0'
-                    'left1'
-                    'center1'
-                    'right1'
-                    'left2'
-                    'center2'
-                    'right2'
-                    'footer';
-            }
-
-            .item2 {
-                padding-bottom: 5%;
-            }
-
-            .slideshowvert {
-                width: 100%;
-            }
-
-            .item5,
-            .item6,
-            .item9 {
-                width: 100%;
-                margin-bottom: 5%;
-            }
-
-            img {
-                max-width: 100%;
-            }
-        }
+        
 
         .item1 {
             grid-area: header;
@@ -162,8 +129,8 @@
     <div class="grid-container">
 
         <div class="item1">
-            <h1 style="font-size: 5vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a></h1>
-            <h3 style="font-size: 3vw; text-align: center; background-color: #8970c8ff;">
+            <h1 style="font-size: 3vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a></h1>
+            <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
                 <a href="./team">TEAM</a> 
                 <a href="./events">PAST EVENTS</a>
                 <a href="./resources">RESOURCES</a>
@@ -178,7 +145,7 @@
                 <h3 style="padding-top: 2.5vw; font-size: 3vw;">K'EMK'EMELÁÝ VANCOUVER CANADA </h3>
             </div>
             <h3 style="font-size: 3vw; margin-left: 1vw; padding-top: 2vw">2024 BULLETIN BOARD:</h3>
-            <ul style="font-size: 2.5vw; text-align: left;">
+            <ul style="font-size: 2vw; text-align: left;">
                 <li>International Women's Day: March 8, 2024</li>
                 <br>
                 <li>IWD Vancouver March: Saturday, March 9, 2024 from 12:00 - 4:00 pm at the šxʷƛ̓ənəq Xwtl'e7énḵ Square (Vancouver Art Gallery North Plaza).</li>
