everything mobile friendly except contact. font changed, about us section renamed

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERNATIONAL WOMEN'S DAY MARCH VANCOUVER</title>
     <meta name="description" content="Celebrate International Women's Day March in Vancouver. Join us for the march on March 8, 2024, at šxʷƛ̓ənəq Xwtl'e7énḵ Square.">
-    <meta name="keywords" content="International Women's Day, international womens march, IWD Vancouver, Women's March, Women's Rights, Vancouver Events">
+    <meta name="keywords" content="women, woman, march, event, rally, protest, 8, 8th, eight, 2023, 2024, 2025, 2026, 2027, international, IWD, rights, justice, volunteer, opportunities, speakers, lectures, equity, equality, intersectional, intersectionality, nonbinary, gender, queer, LGBTQ, opportunity, centre, center, voices, voice, vancouver, events, rights, leadership, International Women’s Day, international womens march, international womans day, international womans march, IWD Vancouver, Women's March, Women's Rights, Vancouver Events, social justice, things to do in vancouver, things to do this weekend, Women’s rally, International Women’s Day Vancouver, international womens day vancouver, womens march, womens rights, volunteer opportunities, Women changing the world, womens history month, womens day, iwd, women speakers, empowerment, women in leadership, womens networks, local, local womens networks, community groups, grassroots, justice, women’s events, campaign, diversity, feminism, feminist, how to be a feminist, Vancouver, langley, surrey, new west, new Westminster, coquitlam, poco, port coquitlam, port moody, burnaby, north shore, White rock, fort langley, cloverdale, delta, lions bay, pitt meadows, north vancouver, east vancouver, east van, north van, west van, west vancouver, richmond, british columbia, canada, University of british columbia, ubc, simon fraser university, sfu, vancouver art gallery,">
 
-    <link rel="icon" href="pictures/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <style>
         @font-face { 
             font-family: 'Sans'; src: url(fonts/bcsansfont_web/BcSansFont_Web/2023_03_14_BCSans-Light_2g.otf) format("OpenType");
         }
+        
+        @font-face {
+        font-family: 'HeaderFont'; src: url(fonts/Abril_Fatface/AbrilFatface-Regular.ttf) format("TrueType");
+         }
+
         body {
             background-color: #d4ccd9ff;
             cursor: url('cursor/woman.png') 13 19.5, move;
@@ -19,6 +24,11 @@
             padding: 0;
             font-family: 'bcsans', Arial, sans-serif;
         }
+
+        h1, h2, h3, h4, h5, h6 {
+        font-family: 'HeaderFont', Arial, sans-serif;
+
+    }
 
         
 
@@ -122,6 +132,11 @@
             opacity: 70%;
             cursor: url('cursor/woman.png')13 19.5, move;
         }
+
+        p a {
+            margin-right: 0;
+        }
+
     </style>
 </head>
 <body>
@@ -129,11 +144,10 @@
     <div class="grid-container">
 
         <div class="item1">
-            <h1 style="font-size: 3vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a></h1>
+            <h1 style="font-size: 4vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a></h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
-                <a href="./team">TEAM</a> 
+                <a href="./team">ABOUT US</a> 
                 <a href="./events">PAST EVENTS</a>
-                <a href="./resources">RESOURCES</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
@@ -209,9 +223,9 @@
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
 
-            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 2vw; height: auto;"></a>
-            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 2vw; height: auto;"></a>
-            <a href="https://linktr.ee/iwdvancouver"><img src="pictures/link.png" alt="link" style="width: 2vw; height: auto;"></a>
+            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 2%; height: auto;"></a>
+            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 2%; height: auto;"></a>
+            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.png" alt = "link" style = "width: 2%; height: auto; "></a>
         </div>
     </div>
 
