--- a/team.html
+++ b/team.html
@@ -10,6 +10,11 @@
         @font-face { 
             font-family: 'Sans'; src: url(fonts/bcsansfont_web/BcSansFont_Web/2023_03_14_BCSans-Light_2g.otf) format("OpenType");
         }
+
+        @font-face {
+        font-family: 'HeaderFont'; src: url(fonts/Abril_Fatface/AbrilFatface-Regular.ttf) format("TrueType");
+         }
+
         body {
             background-color: #d4ccd9ff;
             cursor: url('cursor/woman.png') 13 19.5, move;
@@ -18,7 +23,10 @@
             font-family: 'bcsans', Arial, sans-serif;
         }
 
-       
+        h1, h2, h3, h4, h5, h6 {
+        font-family: 'HeaderFont', Arial, sans-serif;
+
+    }
 
 
 
@@ -154,9 +162,8 @@
         <div class = "item1">
             <h1 ><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
-                <a href="./team">TEAM</a> 
+                <a href="./team">ABOUT US</a> 
                 <a href="./events">PAST EVENTS</a>
-                <a href="./resources">RESOURCES</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
