--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
         @font-face { 
             font-family: 'Sans'; src: url(fonts/bcsansfont_web/BcSansFont_Web/2023_03_14_BCSans-Light_2g.otf) format("OpenType");
         }
+        @font-face {
+        font-family: 'HeaderFont'; src: url(fonts/Abril_Fatface/AbrilFatface-Regular.ttf) format("TrueType");
+         }
+
         body {
             background-color: #d4ccd9ff;
             cursor: url('cursor/woman.png') 13 19.5, move;
@@ -17,25 +21,43 @@
             font-family: 'bcsans', Arial, sans-serif;
         }
 
-        @media screen and (max-width: 375px) {
-            .grid-container {
+        h1, h2, h3, h4, h5, h6 {
+        font-family: 'HeaderFont', Arial, sans-serif;
+
+    }
+
+        @media (max-width: 600px){
+            .grid-container{
+                grid-template-columns: 1fr;
                 grid-template-areas: 
-                    'header'
-                    'left0'
-                    'center0'
-                    'left1'
-                    'center1'
-                    'right1'
-                    'left2'
-                    'center2'
-                    'right2'
-                    'footer';
+                'header'
+                'left0'
+                'center0'
+                'right0'
+                'left1'
+                'center1'
+                'right1'
+                'footer';
+
+                gap: 2%;
+            row-gap: 0.5vw;
+            background-color: #d4ccd9ff;
+            padding-left: 2%;
+            padding-right: 2%;
+            padding-top: 1%;
             }
 
-            img {
-                max-width: 100%;
+            .item1{
+                font-size: 2vw;
             }
+
+            p{
+                    font-size: 3vw;
+                }
+
         }
+
+        
 
         button {
             display: inline-block;
@@ -51,7 +73,9 @@
             background-color: #8970c8ff;
         }
         
-        .item1 {grid-area: header;            
+        .item1 {grid-area: header; 
+            font-size: 1vw; 
+            text-align: center;           
         }
         .item2 {grid-area: left0;
         }
@@ -80,12 +104,12 @@
             'left1  center1  right1'
             'footer footer  footer';
 
-            gap: 4vw; /* Adjusted */
-            row-gap: 1vw; /* Adjusted */
+            gap: 2%;
+            row-gap: 0.5vw;
             background-color: #d4ccd9ff;
-            padding-left: 5vw; /* Adjusted */
-            padding-right: 5vw; /* Adjusted */
-            padding-top: 1vw; /* Adjusted */
+            padding-left: 2%;
+            padding-right: 2%;
+            padding-top: 1%;
         }
 
         img {
@@ -95,7 +119,7 @@
         a {
             text-decoration: none;
             color: #321f4c;
-            margin-right: 2vw; /* Adjusted */
+            margin-right: 2%; /* Adjusted */
         }
 
         a:hover {
@@ -111,11 +135,10 @@
     <div class="grid-container">
 
         <div class="item1">
-            <h1 style="font-size: 3vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
+            <h1><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
-                <a href="./team">TEAM</a> 
+                <a href="./team">ABOUT US</a> 
                 <a href="./events">PAST EVENTS</a>
-                <a href="./resources">RESOURCES</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
@@ -153,7 +176,7 @@
         </div>
 
         <div class="item8">    
-            <p style="text-align: right; font-size: 1.5vw; color:#321f4c">We acknowledge that we are located on the Unceded Coast 
+            <p style="text-align: right; font-size: small; color:#321f4c">We acknowledge that we are located on the Unceded Coast 
                 Salish Territories of the xʷməθkʷəy̓əm (Musqueam), Səl̓ílwətaʔ/<br>
                 Selilwitulh (Tsleil-Waututh), Kwikwitlem (Coquitlam), Kwantlen, Katzie, 
                 Semiahmoo, and Skwxwú7mesh Úxwumixw (Squamish) Peoples.<br> We 
@@ -161,6 +184,6 @@
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
 
-            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 1.5vw; height: auto; "></a>
-            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 1.5vw; height: auto; "> </a>
-            <a href="https://linktr.ee/iwdvancouver"><img src="pictures
+            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 2%; height: auto; "></a>
+            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 2%; height: auto; "> </a>
+            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.png" alt = "link" style = "width: 2%; height: auto; "></a>
