all pages mobile friendlygit add .!

--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
         body {
             background-color: #d4ccd9ff;
             cursor: url('cursor/woman.png') 13 19.5, move;
-            margin: 0; 
+            margin: 0;
             padding: 0;
             font-family: 'bcsans', Arial, sans-serif;
         }
@@ -183,7 +183,13 @@
                 seek to support the different strategies that Indigenous peoples are 
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
+       
 
             <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 2%; height: auto; "></a>
             <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 2%; height: auto; "> </a>
             <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.png" alt = "link" style = "width: 2%; height: auto; "></a>
+        </div>
+        </div>
+        </body>
+</html>
+
