reworked sitemap, cleaned up extra files, and pages

--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="item2">
-            <img src="pictures/DSC05396.jpg" alt="team" style="height: auto;">
+            <img src="pictures/DSC05396.webp" alt="team" style="height: auto;">
         </div>
 
         <div class="item3">
@@ -196,9 +196,9 @@
                 dedicating time and resources to working in solidarity.</p>
        
 
-            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 2%; height: auto; "></a>
-            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 2%; height: auto; "> </a>
-            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.png" alt = "link" style = "width: 2%; height: auto; "></a>
+            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.webp" alt="ig" style="width: 2%; height: auto; "></a>
+            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.webp" alt="face" style="width: 2%; height: auto; "> </a>
+            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "link" style = "width: 2%; height: auto; "></a>
         </div>
         </div>
         </body>
