--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="item2" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
             <div style="display: flex; align-items: center; justify-content: center; background-color: #d4ccd9ff; padding-bottom: 5%;">
-                <img src="pictures/IWD.png" alt="logo" style="width: 35%; height: auto;">
+                <img src="pictures/IWD.webp" alt="logo" style="width: 35%; height: auto;">
                 <h3 style="padding-top: 2.5vw; font-size: 3vw;">K'EMK'EMELÁÝ VANCOUVER CANADA </h3>
             </div>
             <h3 style="font-size: 3vw; margin-left: 1vw; padding-top: 2vw">2024 BULLETIN BOARD:</h3>
@@ -184,17 +184,17 @@
             <div class="slideshowvert">
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC04803.jpg" style="width:100%">
+                    <img src="pictures/DSC04803.webp" style="width:100%">
                 </div>
 
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC04727.jpg" style="width:100%">
+                    <img src="pictures/DSC04727.webp" style="width:100%">
                 </div>
 
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC05297.jpg" style="width:100%">
+                    <img src="pictures/DSC05297.webp" style="width:100%">
                 </div>
             </div>
             <br>
@@ -211,7 +211,7 @@
         </div>
 
         <div class="item9">
-            <img src="pictures/miniwomen1.png" alt="womenminiaml">
+            <img src="pictures/miniwomen1.webp" alt="womenminiaml">
         </div>
 
         <div class="item11">
@@ -223,9 +223,9 @@
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
 
-            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.png" alt="ig" style="width: 2%; height: auto;"></a>
-            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.png" alt="face" style="width: 2%; height: auto;"></a>
-            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.png" alt = "link" style = "width: 2%; height: auto; "></a>
+            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.webp" alt="ig" style="width: 2%; height: auto;"></a>
+            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.webp" alt="face" style="width: 2%; height: auto;"></a>
+            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "link" style = "width: 2%; height: auto; "></a>
         </div>
     </div>
 
