fixed contact button

--- a/contact.html
+++ b/contact.html
@@ -125,6 +125,17 @@
                 padding-top: 1%;
             }
 
+            button {
+            display: inline-block;
+            padding:  3vw 4vw; /* Adjusted */
+            font-size: 1vw; /* Adjusted */
+            background-color: #321f4c;
+            color: #ffffff;
+            border: none;
+            cursor: pointer;
+
+        }
+
             .item1{
                 font-size: 2vw;
             }
@@ -190,7 +201,7 @@
             <p style="text-align: right; font-size: small; color:#321f4c">We acknowledge that we are located on the Unceded Coast 
                 Salish Territories of the xʷməθkʷəy̓əm (Musqueam), Səl̓ílwətaʔ/<br>
                 Selilwitulh (Tsleil-Waututh), Kwikwitlem (Coquitlam), Kwantlen, Katzie, 
-                Semiahmoo, and Skwxwú7mesh Úxwumixw (Squamish) Peoples.<br> We 
+                Semiahmoo, and Skwxwú7mesh Úxwumixw (Squamish) Peoples.<br> <br>We 
                 seek to support the different strategies that Indigenous peoples are 
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
