--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="item6">
             <p>"We have the human right to protest here and with so many injustices worldwide, isn't it our duty to do what others aren't able to do - what others have been imprisoned for?"</p>
-            <p align="right"> - Yasmin Vjes Simsek,<br> IWD Vancouver Chair</p>    
+            <p align="right"> - Yasmin Vejs Simsek,<br> IWD Vancouver Chair</p>    
         </div>
 
         <div class="item9">
