--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
             </div>
             <h3 style="font-size: 3vw; margin-left: 1vw; padding-top: 2vw">2024 BULLETIN BOARD:</h3>
             <ul style="font-size: 2vw; text-align: left;">
-                <li>International Women's Day: March 3, 2024</li>
+
+                <li>IWD Vancouver March: Saturday, March 3rd, 2024 from 12:00 - 4:00 pm at the šxʷƛ̓ənəq Xwtl'e7énḵ Square (Vancouver Art Gallery North Plaza).</li>
                 <br>
-                <li>IWD Vancouver March: Saturday, March 3, 2024 from 12:00 - 4:00 pm at the šxʷƛ̓ənəq Xwtl'e7énḵ Square (Vancouver Art Gallery North Plaza).</li>
+                <li>International Women's Day: March 8th, 2024</li>
                 <br>
+                
                 <li>2024 speakers list coming soon!</li>
             </ul>
         </div>
