--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="item2" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
             <div style="display: flex; align-items: center; justify-content: center; background-color: #d4ccd9ff; padding-bottom: 5%;">
-                <img src="pictures/IWD.webp" alt="logo" style="width: 35%; height: auto;">
+                <img src="pictures/IWD.webp" alt="This photo contains the International Women’s Day logo. The logo is a thick, looping, arrowed circle with the female gender symbol at the inset. The background of the logo is purple, and the logo itself is white. " style="width: 35%; height: auto;">
                 <h3 style="padding-top: 2.5vw; font-size: 3vw;">K'EMK'EMELÁÝ VANCOUVER CANADA </h3>
             </div>
             <h3 style="font-size: 3vw; margin-left: 1vw; padding-top: 2vw">2024 BULLETIN BOARD:</h3>
@@ -186,17 +186,21 @@
             <div class="slideshowvert">
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC04803.webp" style="width:100%">
+                    <img src="pictures/DSC04803.webp" alt = "This is a photo of two of the speakers at the 2023 Vancouver International Women’s Day march. The two speakers are standing together on a large stone platform. They are both holding papers, reading off of them into the microphone. " style="width:100%">
                 </div>
 
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC04727.webp" style="width:100%">
+                    <img src="pictures/DSC04727.webp" alt = "This photo is of the committee chair, Yasmin Simsek, at the 2023 Vancouver International Women’s Day march. She is standing on a large platform of stone stairs. She is standing in front of a microphone, reading off of paper to an audience. Behind her, is a large purple banner that reads International Women’s Day. She is wearing a black pant suit, with a purple shirt underneath. 
+
+                    "style="width:100%">
                 </div>
 
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC05140.webp" style="width:100%">
+                    <img src="pictures/DSC05140.webp" alt = "This is a photo of the march participants from the 2023 Vancouver event. The marchers are walking towards the camera, dressed in warm winter coats. Many are holding signs, clapping, and smiling. 
+
+                    " style="width:100%">
                 </div>
             </div>
             <br>
@@ -213,7 +217,7 @@
         </div>
 
         <div class="item9">
-            <img src="pictures/miniwomen1.webp" alt="womenminiaml">
+            <img src="pictures/miniwomen1.webp" alt="This is an illustration of four women. The four women have diverse skin tones, hair colours, hairstyles, and shirt colours. They are illustrated to be all facing to the left and their heads are slightly overlapping.">
         </div>
 
         <div class="item11">
@@ -225,9 +229,9 @@
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
 
-            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.webp" alt="ig" style="width: 2%; height: auto;"></a>
-            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.webp" alt="face" style="width: 2%; height: auto;"></a>
-            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "link" style = "width: 2%; height: auto; "></a>
+            <a href="https://www.instagram.com/iwdmarchvan/"><img src="pictures/ig.webp" alt="mini instagram link" style="width: 2%; height: auto;"></a>
+            <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.webp" alt="mini facebook link" style="width: 2%; height: auto;"></a>
+            <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "link to all our websites social media's" style = "width: 2%; height: auto; "></a>
         </div>
     </div>
 
