--- a/team.html
+++ b/team.html
@@ -167,7 +167,7 @@
         </div>
 
         <div class = "item2">
-            <img src="pictures/yas_1good.webp" alt="yasmin">
+            <img src="pictures/yas_1good.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee chair, Yasmin.">
             <p> <b>Yasmin (she/her) </b> <br> 
                 Chair <br>
                 Yasmin is an author, actor and activist. Her full time job is currently working with the North Shore Women's Centre to provide gender based violence 
@@ -184,7 +184,7 @@
         </div>
 
         <div class = "item3">
-            <img src="pictures/Megan1.webp" alt="megan">
+            <img src="pictures/Megan1.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee vice chair, Megan.">
             <p> <b>Megan (she/her) </b> <br>
                 Vice-Chair <br>
                 Megan completed her MA in Gender, Sexuality & Women's Studies from SFU in 2022. Since graduating, Megan worked on the project team tasked with reimagining the Gender Clinic at BC Children's Hospital, and currently works with the Harm Reduction team at the BC Centre for Disease Control. 
@@ -199,7 +199,7 @@
         </div>
 
         <div class = "item4">
-            <img src="pictures/oreofe_1good.webp" alt="oreofeoluwa">
+            <img src="pictures/oreofe_1good.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee Administrative Director, Oreofeoluwa">
             <p> <b>Oreofeoluwa (she/her) </b> <br>
                 Administrative Director <br>
                 Oreofeoluwa has a bachelor's degree in International relations and diplomacy followed by a masters degree in gender, sexuality and 
@@ -219,7 +219,7 @@
         </div>
 
         <div class = "item5">
-            <img src = "pictures/gulche_1good.webp" alt="Gülce" >
+            <img src = "pictures/gulche_1good.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee operations director, Gülce" >
             <p> <b>Gülce (she/her)</b> <br>
                 Operations Director<br>
                 Gülce is currently completing her MA in Developmental Psychology at SFU, focusing on how the community contributes to child and 
@@ -241,7 +241,7 @@
         </div>
 
         <div class = "item6">
-            <img src = "pictures/karissa1.webp" alt="karissa" >
+            <img src = "pictures/karissa1.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee director of public relations, Karissa." >
             <p> <b>Karissa (she/her)</b> <br>
                 Public Relations Director<br>
                 Karissa is currently completing her BA in International Studies at SFU with a focus on global politics, culture, and society. 
@@ -261,7 +261,7 @@
         </div>
 
         <div class = "item7">
-            <img src = "pictures/spencer1.jpeg" alt="spencer" >
+            <img src = "pictures/spencer1.jpeg" alt="This is a headshot photo of the International Women’s Day Vancouver Committee director of content, spencer" >
             <p> <b>spencer lee 李丹彤 (they/them/佢keoi5) </b> <br>
                 Content Director <br>
                 spencer is a first-generation Han Chinese-Canadian settler living on traditional, unceded, stolen lands of the Skwxwú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh 
@@ -337,9 +337,9 @@
                 using to protect their land and their communities, <br>and we commit to 
                 dedicating time and resources to working in solidarity.</p>
 
-                <a href="https://www.instagram.com/iwdmarchvan/"><img src = "pictures/ig.webp" alt = "ig" style = "width: 2%; height: auto; "></a>
-                <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src = "pictures/facebook.webp" alt = "face" style = "width: 2%; height: auto; "> </a>
-                <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "link" style = "width: 2%; height: auto; "></a>
+                <a href="https://www.instagram.com/iwdmarchvan/"><img src = "pictures/ig.webp" alt = "mini link to instagram" style = "width: 2%; height: auto; "></a>
+                <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src = "pictures/facebook.webp" alt = "mini link to facebook" style = "width: 2%; height: auto; "> </a>
+                <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "mini link to all our social medias" style = "width: 2%; height: auto; "></a>
 
 
         </div>
